add structure and style; add initial js functionality

--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <script src="script.js" defer></script>
     <title>PROJECT: LIBRARY</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="header">
+            <span class="material-icons-outlined logo">local_library</span>
+            <span class="logo-title">My Library</span>
+            <div class="header-content">
+                <button class="add-book-btn"><span class="material-icons-outlined add-icon">add</span>Add book</button>
+            </div>
+        </div>
+        <div class="books-container"></div>
+        <div class="footer">
+            <span class="material-icons">copyright</span>
+            <span>Eduardo</span>
+        </div>
+    </div>
 </body>
 </html>
