add more js funcionalities; small changes to styling

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <span class="material-icons-outlined logo">local_library</span>
             <span class="logo-title">My Library</span>
             <div class="header-content">
-                <button class="add-book-btn"><span class="material-icons-outlined add-icon">add</span>Add book</button>
+                <button class="add-book-btn" href="#openModal"><span class="material-icons-outlined add-icon">add</span>Add book</button>
             </div>
         </div>
-        <div class="books-container"></div>
+        <div class="books-container">
+
+        </div>
         <div class="footer">
             <span class="material-icons">copyright</span>
             <span>Eduardo</span>
