add basic modal

--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
             <span class="material-icons-outlined logo">local_library</span>
             <span class="logo-title">My Library</span>
             <div class="header-content">
-                <button class="add-book-btn" href="#openModal"><span class="material-icons-outlined add-icon">add</span>Add book</button>
+                <label class="add-book-btn btn" for="modal-1"><span class="material-icons-outlined add-icon">add</span>Add book</label>
             </div>
         </div>
-        <div class="books-container">
-
-        </div>
+        <div class="books-container"></div>
         <div class="footer">
             <span class="material-icons">copyright</span>
             <span>Eduardo</span>
+        </div>
+    </div>
+    <input class="modal-state" id="modal-1" type="checkbox" />
+    <div class="modal">
+        <label class="modal__bg" for="modal-1"></label>
+        <div class="modal__inner">
+            <label class="modal__close" for="modal-1"></label>
+            <h2>Caaaats FTW!</h2>
+            <p><img src="" alt="" />Aliquam in sagittis nulla. Curabitur euismod diam eget risus venenatis, sed dictum lectus bibendum. Nunc nunc nisi, hendrerit eget nisi id, rhoncus rutrum velit. Nunc vel mauris dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam fringilla quis nisi eget imperdiet.</p>
         </div>
     </div>
 </body>
